# File-Compression-TooL

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/algorithms/: Huffman.cpp  Huffman.hpp  LZW.cpp  LZW.hpp
src/core/: BitStream.cpp  BitStream.hpp  ICompressor.hpp
src/factory/: CompressorFactory.cpp  CompressorFactory.hpp
src/utils/: Logger.hpp
tests/: CMakeLists.txt  test_bitstream.cpp  test_huffman.cpp  test_lzw.cpp
